--- a/practice_simple_lm.qmd
+++ b/practice_simple_lm.qmd
@@ -51,6 +51,7 @@ Let's start by loading the `MASS` and `ISLR2` packages, which are very large col
 library(MASS)
 library(ISLR2)
 library(lme4)
+library(ggplot2)
 ```
 
 ## Boston Housing Data
@@ -93,7 +94,7 @@ What is your model output telling you?
 
 #### Answer
 
-Its saying the median home value decreases by (-)0.5728 for every 1 percent increase in lower status population.
+34.55 is the the intercept (b in y=mx+b). -0.95 is the slope (mx in y=mx+b). Its saying the median home value decreases by 0.95 for every 1 increase in lower status population.
 
 You can also try `summary(lm.model)`.
 
@@ -143,9 +144,13 @@ abline(lm.model)
 Can you convert the above code chunk to `ggplot`? Try below. Have fun with editing the appearance of your plot if you'd like :)
 
 ```{r}
-library(ggplot2)
-ggplot(data="Boston", aes(x = medv, y = lstat) +
-         geom_point())
+ggplot(data = Boston, aes(x = lstat, y = medv)) +
+  geom_point() +  # Scatter plot
+  geom_smooth(method = "lm", se = FALSE, color = "blue") +
+  labs(title = "Scatterplot of lstat vs medv with Regression Line",
+       x = "Percent of households with low socioeconomic status",
+       y = "Median house value") +
+  theme_minimal()
 ```
 
 In a future class, we'll explore some diagnostic plots and what that means for evaluating models. For now, just run the below and have a look:
@@ -167,11 +172,11 @@ View(Boston)
 
 ### Question 9
 
-What variables are you interested in exploring using a linear regression? Just pick and `x` and a `y` and describe your research question below in plain English:
+What variables are you interested in exploring using a linear regression? Just pick an `x` and a `y` and describe your research question below in plain English:
 
 #### Answer
 
-(write your answer here)
+Criminal rate and Age
 
 ### Question 10
 
@@ -180,10 +185,11 @@ What variables are you interested in exploring using a linear regression? Just p
 Build and run your model, examine the model output:
 
 ```{r}
+#model <- lm(y ~ x, data=df)
 
+Q10model <- lm(crim ~ age, data = Boston)
 
-
-
+summary(Q10model)
 ```
 
 #### Part 2
@@ -192,7 +198,7 @@ Explain what you found in plain English. Do your best.
 
 #### Answer
 
-(write your answer here)
+Criminal rate increases by 0.10779 for every 1 increase in age. Our model states a very significant P-value which means this is a good model. The variation in our data is decent. The R squared value is low but for the age variable, the model fits enough. F-Statistic = 71.62 is good!
 
 ## The end!
 
